--- a/app/src/main/res/layout/fragment_active.xml
+++ b/app/src/main/res/layout/fragment_active.xml
@@ -17,22 +17,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/red">
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ELECTION NAME"
-                android:textColor="@color/white"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:layout_margin="5dp"
-                android:fontFamily="sans-serif-condensed-medium"/>
+                android:background="@color/green">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ELECTION NAME"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:layout_margin="5dp"
+                    android:fontFamily="sans-serif-condensed-medium"/>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
