--- a/app/src/main/res/layout/fragment_phase1.xml
+++ b/app/src/main/res/layout/fragment_phase1.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/phase1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CreateElections.Phase1"
     android:background="@color/green">
@@ -23,6 +24,7 @@
     android:layout_gravity="center"
     app:cardCornerRadius="5dp"
     android:id="@+id/card1"
+    android:layout_marginBottom="20dp"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     app:cardBackgroundColor="@color/background_white">
@@ -39,51 +41,33 @@
     android:layout_gravity="center"
     android:src="@drawable/agora"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
-
-    <AutoCompleteTextView
-    android:id="@+id/electionName"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Election Name"
-    android:inputType="text"
-    android:maxLines="1"
-    android:singleLine="true" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/electionName"
+            android:layout_margin="10dp"
+            android:hint="Election Name"
+            android:inputType="text"
+            android:singleLine="true"
+            android:maxLines="1"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+        <EditText
+            android:id="@+id/electionDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Election Description"
+            android:layout_margin="10dp"
+            android:inputType="text"
+            android:maxLines="1"
+            android:singleLine="true" />
 
-    <AutoCompleteTextView
-    android:id="@+id/electionDescription"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Election Description"
-    android:inputType="text"
-    android:maxLines="1"
-    android:singleLine="true" />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
 
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/forwardCard1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
     </LinearLayout>
 
